--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   column-gap: 1.2rem;
   /* gap: 0 1.2rem; */
 
-  padding: 5%;
+  padding: 3% 5% 3% 5%;
 }
 
 .col {
@@ -47,7 +47,36 @@
   border-radius: 5px;
 }
 
-button {
+.btn-update {
   height: 60%;
   padding: 2%;
+  cursor: pointer;
+  max-height: 5rem;
+  max-width: 6.5rem;
+}
+
+.matrixTransformation {
+  height: 100%;
+  padding: 0.5rem 1rem;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  border-radius: 0.5rem;
+
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.matrixTransformation > div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 1rem;
+  /* flex-direction: column; */
+}
+
+.matrixTransformation > div > span {
+  /* line-height: 1.5rem; */
 }
